--- a/src/css/InfoBox.css
+++ b/src/css/InfoBox.css
@@ -1,7 +1,38 @@
 .infoBox {
   background-color: #242526;
-  padding: 5px;
-  /* color: #e4e6eb; */
-  border-radius: 15px;
+  padding: 0 10px;
+  margin: 5px;
+  flex: 1;
   align-items: center;
+  border-radius: 15px;
+  box-shadow: 0 0 8px -4px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+}
+
+.infoBox:not(:last-child) {
+  margin-right: 10px;
+}
+
+.infoBox--selected {
+  border-top: 10px solid black;
+}
+
+.infoBox--selected--red {
+  border-top: 10px solid red;
+}
+.infoBox--selected--green {
+  border-top: 10px solid green;
+}
+
+.redc {
+  color: red;
+  font-weight: 600;
+  font-size: 1.75rem;
+  margin-bottom: 0.5rem;
+}
+.greenc {
+  color: rgb(44, 170, 44);
+  font-weight: 600;
+  font-size: 1.75rem;
+  margin-bottom: 0.5rem;
 }
